--- a/weather-site/tsconfig.json
+++ b/weather-site/tsconfig.json
@@ -7,6 +7,8 @@
   "compilerOptions": {
     "module": "CommonJS",
     "target": "ES6",
+    "declaration": true,  // Generate .d.ts files
+    "declarationDir": "./types",
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "typeRoots": ["node_modules/@types", "src/types"],
