updated frontend tsconfig files

--- a/weather-site/tsconfig.app.json
+++ b/weather-site/tsconfig.app.json
@@ -13,11 +13,14 @@
 
     /* Bundler mode */
     "moduleResolution": "bundler",
+    "noEmit": true,
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
-    "noEmit": true,
     "jsx": "react-jsx",
+
+    /* Project references */
+    "composite": true,
 
     /* Linting */
     "strict": true,
