--- a/weather-site/tsconfig.node.json
+++ b/weather-site/tsconfig.node.json
@@ -8,10 +8,13 @@
 
     /* Bundler mode */
     "moduleResolution": "bundler",
+    "noEmit": true,
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
-    "noEmit": true,
+
+    /* Project references */
+    "composite": true,
 
     /* Linting */
     "strict": true,
