--- a/weather-site/tsconfig.node.json
+++ b/weather-site/tsconfig.node.json
@@ -1,27 +1,10 @@
 {
   "compilerOptions": {
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-    "target": "ES2022",
-    "lib": ["ES2023"],
+    "composite": true, // Required for referenced projects
     "module": "ESNext",
-    "skipLibCheck": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "noEmit": true,
-    "allowImportingTsExtensions": true,
-    "isolatedModules": true,
-    "moduleDetection": "force",
-
-    /* Project references */
-    "composite": true,
-
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "moduleResolution": "Node", // Use "Node" for Node-related files
+    "allowSyntheticDefaultImports": true,
+    "noEmit": true // Node config should not emit files
   },
   "include": ["vite.config.ts"]
 }
