--- a/weather-site/package.json
+++ b/weather-site/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "build": "tsc --build tsconfig.app.json",
+    "start": "vite",
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "clean": "rimraf dist && rimraf src/**/*.js && rimraf src/**/*.d.ts"
   },
   "dependencies": {
     "@radix-ui/react-popover": "^1.1.5",
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "countries-cities": "^0.0.11",
+    "country-state-city": "^3.2.1",
     "lucide-react": "^0.471.0",
     "node-schedule": "^2.1.1",
     "proxy-agent": "^6.5.0",
@@ -31,7 +32,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/all-the-cities": "^3.1.3",
-    "@types/node": "^22.10.5",
+    "@types/node": "^22.10.10",
     "@types/node-schedule": "^2.1.7",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
@@ -44,9 +45,9 @@
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
-    "typescript": "~5.6.2",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5",
+    "vite": "^6.0.11",
     "vite-plugin-webfont-dl": "^3.10.4"
   }
 }
